<resources>
    <string name="app_name">Udon Thani Food</string>

    <string name="app_name2">Udon Thani Food</string>
    <string name="open_drawer">OpenMenu</string>
    <string name="close_drawer">CloseMenu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_maps">Map</string>
    <string name="or">or</string>
    <string name="Amount">จำนวน</string>
    <string name="cart_is_empty">ตะกร้าว่างเปล่า</string>
    <string name="add_to_order">เพิ่มลงตะกร้า</string>
    <string name="order_food">สั่งซื้อ</string>
    <string name="total">ยอดรวมสุทธิ:</string>
    <string name="zero_baht">0฿</string>
    <string name="baht">฿</string>
    <string name="confirm_order">ยืนยันการสั่งอาหาร</string>
    <string name="your_order_history_is_empty">คุณยังไม่มีประวัติการสั่งซื้อ</string>
    <string name="close">ปิด</string>
    <string name="order_history_detail">รายละเอียดการสั่งซื้อ</string>
    <string name="success_order">We will deliver the beer to you as soon as possible.</string>
    <string name="try_again">ลองใหม่อีกครั้ง</string>
    <string name="added">เพิ่มแล้ว</string>
    <string name="at"> at </string>
    <string name="bottles_of_beer"> bottles of beer</string>
    <string name="beer">Beer</string>
    <string name="history">History</string>
    <string name="sorry_someting_went_wrong">ขออภัยค่ะ!, มีบางอย่างผิดพลาด กรุณาลองใหม่อีกครั้ง!</string>
    <string name="menu_favorite">เมนูที่ถูกใจ</string>
    <string name="menu_home">หน้าแรก</string>
    <string name="menu_history">ประวัติการสั่่งซื้อ</string>
    <string name="menu_me">ฉัน</string>
    <string name="menu_nearby">ร้านใกล้เคียง</string>
    <string name="yes">ตกลง</string>
    <string name="no">ยกเลิก</string>
    <string name="delivery_fee">ค่าจัดส่ง</string>
    <string name="add_on">เพิ่มเติม</string>
    <string name="go_to_location">ค้นหาตำแหน่งอัตโนมัติ</string>
    <string name="NEXT">ต่อไป</string>
    <string name="Order_Confirm">ยืนยันการสั่งอาหาร</string>
    <string name="checkOut">ยืนยันการสั่งอาหาร</string>
    <string name="Back">กลับ</string>
    <string name="List_of_beer">รายการ</string>
    <string name="login">เข้าสู่ระบบ</string>


    <string name="facebook_app_id">1896716797285966</string>
    <string name="fb_login_protocol_scheme">fb1896716797285966</string>
    <string name="favorite_menu">เมนูที่ถูกใจ</string>
    <string name="sorry_you_not_login">ขออภัยค่ะ คุณยังไม่ได้เข้าสู่ระบบ</string>
    <string name="login_or_register">เข้าสู่ระบบ หรือ ลงทะเบียน</string>
    <string name="point">แต้มสะสมของคุณ:</string>
    <string name="your_order_favorite_is_empty">คุณยังไม่มีรายการที่ถูกใจ</string>
    <string name="save">บันทึก</string>
    <string name="address_is_empty">รายการที่อยู่ว่างเปล่า</string>
    <string name="your_emp_order_is_empty">รายการสั่งซื้อว่างเปล่า</string>


</resources>
