<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:clipChildren="false"
    app:cardCornerRadius="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="false"
                android:clickable="false"
                android:maxHeight="150dp"
                android:minHeight="@dimen/beer_product_height"
                android:padding="8dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_pic_loading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/default_padding_margin"
                android:paddingStart="@dimen/default_padding_margin"
                android:paddingTop="@dimen/default_padding_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_food_name"
                        style="@style/BeerTextView.DarkGray.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_padding_margin"
                        android:clickable="false"
                        android:text="Hoegaarden" />

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_dot_vertical" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_padding_margin"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_food_volume"
                            style="@style/BeerTextView.Black.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_padding_margin_small"
                            android:clickable="false"
                            android:text="300 ml" />

                        <TextView
                            android:id="@+id/tv_food_percent"
                            style="@style/BeerTextView.Black.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="5% alc/vol" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_food_price"
                        style="@style/BeerTextView.Accent.Header1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:text="@string/zero_baht" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_to_cart"
                style="@style/BeerButton.Active"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_product_height"
                android:layout_margin="@dimen/default_padding_margin"
                android:text="@string/add_to_order" />

            <Button
                android:id="@+id/btn_added"
                style="@style/BeerButton.Active.Boarder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_product_height"
                android:layout_margin="@dimen/default_padding_margin"
                android:text="@string/added"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>


        <com.like.LikeButton
            android:id="@+id/btn_favorite_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:anim_scale_factor="2"
            app:circle_end_color="@color/colorAccent"
            app:circle_start_color="@color/colorPrimary"
            app:dots_primary_color="@color/colorAccent"
            app:dots_secondary_color="@color/colorPrimary"
            app:icon_size="27dp"
            app:icon_type="heart"
            app:like_drawable="@drawable/ic_favorite_2_512"
            app:unlike_drawable="@drawable/ic_favorite_4_512" />


    </FrameLayout>

</android.support.v7.widget.CardView>