<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_600"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".ui.ordering.main.OrderingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_ordering"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ordering_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Address"
                android:textColor="@color/grey_5"
                android:textSize="18sp" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/grey_40"
                app:srcCompat="@drawable/ic_close" />
        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <com.thingnoy.thingnoy500v3.view.CustomViewPager
            android:id="@+id/vpg_ordering_step"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_large">

            <Button
                android:id="@+id/btn_check_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_orange"
                android:paddingLeft="@dimen/margin_large"
                android:paddingRight="@dimen/margin_large"
                android:text="@string/checkOut"
                android:textColor="@color/grey_80"
                android:textSize="@dimen/text_headline_2"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center|top"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/mr_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="@dimen/default_icon_size_extra_large"
                        android:layout_height="@dimen/default_icon_size_extra_large"
                        android:src="@drawable/selector_btn_back" />

                    <TextView
                        style="@style/BeerTextView.LightGray.Body1"
                        android:layout_marginStart="-12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Back" />

                </android.support.v7.widget.LinearLayoutCompat>

            </com.balysv.materialripple.MaterialRippleLayout>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/mr_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/BeerTextView.LightGray.Body1"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="-12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NEXT" />

                    <ImageView
                        android:id="@+id/btn_next"
                        android:layout_width="@dimen/default_icon_size_extra_large"
                        android:layout_height="@dimen/default_icon_size_extra_large"
                        android:src="@drawable/selector_btn_next" />
                </android.support.v7.widget.LinearLayoutCompat>

            </com.balysv.materialripple.MaterialRippleLayout>


        </android.support.v7.widget.LinearLayoutCompat>


    </LinearLayout>


</LinearLayout>